# GingyTech_release_public

./: gradle.properties  local.properties
app/: build.gradle
app/libs/: gingyusb-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gingytech/imageanalysis/: FingerprintSensor.java  MainActivity.java  MyPreferenceCategory.java  SettingsActivity.java
app/src/main/jni/: CMakeLists.txt  gfp.cpp
app/src/main/jni/inc/: gingyAlgor.h  libISP.h  libgingyimg.h
app/src/main/res/drawable/: ic_rotate_left_1.xml  ic_rotate_left_5.xml  ic_rotate_right_1.xml  ic_rotate_right_5.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: pref_image.xml
gradle/wrapper/: gradle-wrapper.properties
